--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
+.heading{
+  color: #00fe77;
+  border-radius: 30px;
+  background-color: #0e1623e3;
+  
+  width: 91.6666667%;
   text-align: center;
+  margin-top: 25px;
+ 
+ 
+  padding: 2px;
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.boxes{
   display: flex;
   flex-direction: column;
+  width: 100%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 25px;
+  row-gap: 1.25rem;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.outer{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* background: #0e162377; */
+  position: relative;
+  align-items: center;
 }
